force-app/main/default/objects/Dynamic_Plans_Restriction_Setttings__mdt/Dynamic_Plans_Restriction_Setttings__mdt.object-meta.xml
<CustomObject>
    <label>Dynamic Plans Restriction Settting</label>
    <pluralLabel>Dynamic Plans Restriction Setttings</pluralLabel>
</CustomObject>