force-app/main/default/objects/Dynamic_Plans_Restriction_Setttings__mdt/fields/Field_Blueprint_Default_Section_Fields__c.field-meta.xml
<CustomField>
    <fullName>Field_Blueprint_Default_Section_Fields__c</fullName>
    <description>Field Blueprint Default Section Fields (Add &apos;,&apos; seperated field API names)</description>
    <inlineHelpText>Field Blueprint Default Section Fields (Add &apos;,&apos; seperated field API names)</inlineHelpText>
    <label>Field Blueprint Default Section Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>