force-app/main/default/objects/Dynamic_Plans_Restriction_Setttings__mdt/fields/Goal_Template_Fields_To_Show__c.field-meta.xml
<CustomField>
    <fullName>Goal_Template_Fields_To_Show__c</fullName>
    <description>Goal template field APIs to show in the Goal Field Blueprint selector (comma separated)</description>
    <inlineHelpText>Goal template field APIs to show in the Goal Field Blueprint selector (comma separated)</inlineHelpText>
    <label>Goal Template Fields To Show</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>