force-app/main/default/objects/Dynamic_Plans_Restriction_Setttings__mdt/fields/Plan_Template_Fields_To_Show__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template_Fields_To_Show__c</fullName>
    <description>Not in use because it was not subscribr editable(Deprecated)</description>
    <inlineHelpText>Plan template fields to show from plan object (add &apos;,&apos; seperated field API name)</inlineHelpText>
    <label>Plan Template Fields To Show</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>