force-app/main/default/objects/Dynamic_Plans_Restriction_Setttings__mdt/fields/Step_Template_Fields_To_Show__c.field-meta.xml
<CustomField>
    <fullName>Step_Template_Fields_To_Show__c</fullName>
    <description>Step template field APIs to show in the Step Field Blueprint selector (comma separated)</description>
    <inlineHelpText>Step template field APIs to show in the Step Field Blueprint selector (comma separated)</inlineHelpText>
    <label>Step Template Fields To Show</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>